// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Step
  finished={true}
  onOpen={[MockFunction]}
  open={true}
  renderForm={[Function]}
  renderResult={[Function]}
  stepTitle="onboarding.tutorial.with.jenkins.alm_selection.title"
/>
`;

exports[`should render correctly: form, default 1`] = `
<div
  className="boxed-group-inner"
>
  <ButtonToggle
    label="onboarding.tutorial.with.jenkins.alm_selection.title"
    onCheck={[MockFunction]}
    options={
      [
        {
          "label": "alm.bitbucketcloud.long",
          "value": "bitbucketcloud",
        },
        {
          "label": "alm.bitbucket",
          "value": "bitbucket",
        },
        {
          "label": "alm.github",
          "value": "github",
        },
        {
          "label": "alm.gitlab",
          "value": "gitlab",
        },
      ]
    }
  />
</div>
`;

exports[`should render correctly: form, with alm 1`] = `
<div
  className="boxed-group-inner"
>
  <ButtonToggle
    label="onboarding.tutorial.with.jenkins.alm_selection.title"
    onCheck={[MockFunction]}
    options={
      [
        {
          "label": "alm.bitbucketcloud.long",
          "value": "bitbucketcloud",
        },
        {
          "label": "alm.bitbucket",
          "value": "bitbucket",
        },
        {
          "label": "alm.github",
          "value": "github",
        },
        {
          "label": "alm.gitlab",
          "value": "gitlab",
        },
      ]
    }
    value="azure"
  />
</div>
`;

exports[`should render correctly: result, with alm 1`] = `
<div
  className="boxed-group-actions display-flex-center"
>
  <AlertSuccessIcon
    className="spacer-right"
  />
  alm.bitbucketcloud.long
</div>
`;
